fix(v3.8): injection dependency repaired